--- a/css/main.css
+++ b/css/main.css
@@ -49,10 +49,28 @@
 
 *:focus {
 
-    outline: 5px solid #203321;
+    outline: 2px solid #4d4d4d;
+    animation: focus-ani .4s ease-in;
 
 }
 
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+    
+  }
+   
+::-webkit-scrollbar-thumb {
+    background: #888; 
+    border-radius: 1px;
+  }
+  
+::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+  }
 .fas
 {
     border: 1px solid var(--gray);
@@ -70,13 +88,11 @@
     margin: 5px 25px;
     font-size: 20px;
     font-family: 'Segoe UI';
-  
-    color: var(--gray-dark)
+  transition: .4s;
+    color: var(--gray-dark);
+    cursor: pointer
 }
 
-/* .hnav-point:hover {
-    color: black
-} */
 .hnav-point:hover  .fas{
     
     border: 1px solid var(--teal);
@@ -90,11 +106,22 @@ a {
 {
     background-color: #399b75;
     color: white;
-  cursor: pointer;
+    cursor: pointer;
     border: none;
     padding: 5px 30px;
     font-size: 20px;
     border-radius: 3px;
+    
+}
+.btn:hover{
+ opacity: .8
+}
+
+.pag-btn
+{
+    right: 50px;
+    bottom: 30px;
+    position: absolute;
     
 }
 .logo
@@ -155,12 +182,18 @@ header div {
     margin-right: 5px;
 }
 
+.taskx-anima
+{
+    animation: open-later-ani .6s ease-in;
+}
 main {
     width: 100%;
-    height: 2000px;
+    min-height:  1500px;
     cursor: default;
-    background-color: #e2fae2;
+    background: rgb(137,197,200);
+    background: linear-gradient(0deg, rgba(137,197,200,1) 0%, rgba(226,250,226,1) 100%);
     z-index: -99999;
+   
 }
 
 
@@ -202,32 +235,44 @@ nav p:hover {
 .content-container {
 
     height: 100%;
-    width: 650px;
+    width: 100%;
     margin-top: 30px;
     margin-left: 50%;
     transform: translateX(-50%);
     position: absolute;
+  
 
 }
+.exc-container {
 
+    width: 700px;
+    height: auto;
+    position: absolute;
+    /* border: 1px solid black; */
+    margin-left: 50%;
+    transform: translateX(-50%);
+    /* background-color: rebeccapurple; */
+}
 .title {
     text-align: center;
     color: #555555;
     font-family: roboto;
     text-transform: uppercase;
-    margin-top: 0px;
+    margin-top: -30px;
     margin-bottom: 60px;
+    letter-spacing: 5px;
 }
 
 .ans-input
 {
     border-radius: 3px;
-    height: 40px;
-    width: 150px;
-    margin-top: 5px;
-    border: 1px solid #92d4d3;
+    height: 140px;
+    width: 100%;
+    margin-top: 60px;
+    border: 1px solid #363636;
     text-indent: 10px;
-    font-size: 20px;
+    font-size: 14px;
+    text-align: center;
 }
 .input
 
@@ -269,9 +314,7 @@ h2 {
     font-family: roboto;
     font-size: 16px;
     margin-top: 15px;
-
-
-}
+ }
 
 
 
@@ -396,3 +439,36 @@ table td {
 
 
 }
+
+@keyframes open-later-ani {
+    0% {
+      opacity: 0;
+      
+      
+    }
+   80%
+   {
+       opacity: 0;
+   }
+    100% {
+      opacity: 1;
+    
+    }
+  }
+  @keyframes focus-ani
+  {
+     0%{
+         opacity: 0;
+         
+        
+     }
+     80%{
+        opacity: 0.8;
+     }
+     100%
+     {
+         opacity: 1;
+       
+         
+     }
+  }
