json to firestore & firestore doc ok

--- a/css/contact.css
+++ b/css/contact.css
@@ -34,6 +34,34 @@ h2{
 {
     background-color: rgb(240, 245, 245);
 }
+.tbl-info
+{
+    margin: 120px 0;
+    
+}
+.tbl-info td
+{
+    width: auto;
+   border: none;
+}
+.nofas
+{
+    border: none!important;
+    color: #19818A;
+
+}
+.nofas:hover
+{
+    background-color: unset!important;
+    
+}
+.tbl-info tr
+{
+    margin-top: 50px;
+    line-height: 30px;
+   
+}
+
 .msg
 {
     height: 200px;
