--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@
     --primary: #007bff;
     --secondary: #6c757d;
     --success: #28a745;
-    --info: #17a2b8;
+    --info: hsl(188, 72%, 74%);
     --warning: #ffc107;
     --danger: #dc3545;
     --light: #f8f9fa;
@@ -71,6 +71,42 @@
 ::-webkit-scrollbar-thumb:hover {
     background: #555; 
   }
+
+  #loader {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999999999;
+    overflow: hidden;
+    text-align: center;
+  }
+  .spinner {
+    border: 10px solid var(--cyan);
+    border-radius: 50%;
+    border-top: 10px solid #8bdfec;
+    width: 90px;
+    height: 90px;
+    -webkit-animation: spin 1s linear infinite;
+    animation: spin 1s linear infinite;
+    display: inline-block;
+    vertical-align: middle;
+    position: absolute;
+    margin: auto;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+  }
+  
+  .hide {
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s 0.1s, opacity 0.1s linear;
+  }
+  
+ 
 .fas
 {
     border: 1px solid var(--gray);
@@ -100,6 +136,7 @@
 }
 a {
     text-decoration: none;
+    color: unset;
 }
 
 .btn
@@ -188,7 +225,7 @@ header div {
 }
 main {
     width: 100%;
-    min-height:  1500px;
+    min-height:  1800px;
     cursor: default;
     background: rgb(137,197,200);
     background: linear-gradient(0deg, rgba(137,197,200,1) 0%, rgba(226,250,226,1) 100%);
@@ -471,4 +508,14 @@ table td {
        
          
      }
+  }
+
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+  
+    100% {
+      transform: rotate(360deg);
+    }
   }
