og modon mukodik a history

--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@
     --primary: #007bff;
     --secondary: #6c757d;
     --success: #28a745;
-    --info: hsl(188, 72%, 74%);
+    --info: #8de0ec;
     --warning: #ffc107;
     --danger: #dc3545;
     --light: #f8f9fa;
@@ -37,7 +37,7 @@
     --breakpoint-md: 768px;
     --breakpoint-lg: 992px;
     --breakpoint-xl: 1200px;
-    /* #7D441A */
+    
 }
 
 * {
@@ -106,7 +106,12 @@
     transition: visibility 0s 0.1s, opacity 0.1s linear;
   }
   
- 
+ .incorrect
+ {
+     border: 1px solid red;
+     color: red;
+
+ }
 .fas
 {
     border: 1px solid var(--gray);
@@ -138,7 +143,9 @@ a {
     text-decoration: none;
     color: unset;
 }
-
+html{
+    background-color: rgba(226,250,226,1)
+}
 .btn
 {
     background-color: #399b75;
