--- a/css/excercies.css
+++ b/css/excercies.css
@@ -66,7 +66,6 @@
    
 }
 
-}
 .animo
 {
     animation: open-exc-ani .3s forwards ease-in-out;
@@ -97,9 +96,10 @@
 .pad-container
 {
 width: 470px;
-height: 520px;
+min-height: 520px;
+height: auto;
 display: block;
-position: relative;
+position: absolute;
 padding: 40px 60px;
 background-color: white;
 border-radius: 30px;
