--- a/css/contact.css
+++ b/css/contact.css
@@ -23,7 +23,7 @@ h2{
     border-radius: 3px;
     height: 40px;
     width: 100%;
-    border: 1px solid #363636;
+    border: 1px solid #bcbbbb;
     text-indent: 10px;
     font-size: 14px;
     margin-top: 30px;
