--- a/css/excercies.css
+++ b/css/excercies.css
@@ -1,16 +1,5 @@
 :root {
-    /* --light-brown: #634100; */
-    --light-brown: #765c38;
-    --dark-brown: #1b0d01;
-    --dark-blue: #041738;
-    --yellow: #C09A67;
-    --blackk: #0A0907;
-    --minimal: 'Gravesend Sans';
-    --royal: 'Mencken Std';
-
-
-
-
+  
     --blue: #007bff;
     --indigo: #6610f2;
     --purple: #6f42c1;
@@ -37,7 +26,7 @@
     --breakpoint-md: 768px;
     --breakpoint-lg: 992px;
     --breakpoint-xl: 1200px;
-    /* #7D441A */
+   
 }
 
 .bar {
@@ -59,7 +48,7 @@
     transform: translatex(-50%);
     transition: 3s;
    justify-content: center;
-   display: flex;
+   display: block;
    padding: 20px;
    background-color: #B2CBB2;
 
@@ -95,11 +84,13 @@
 
 .pad-container
 {
+left: 50%;
+transform: translateX(-50%);
 width: 470px;
 min-height: 520px;
 height: auto;
 display: block;
-position: absolute;
+position: relative;
 padding: 40px 60px;
 background-color: white;
 border-radius: 30px;
@@ -115,8 +106,8 @@ box-shadow: 5px 6px 15px 5px rgba(146,146,146,0.6);
 {
     font-size: 35px;
     position: fixed;
-    top:10px;
-    right: 20px;
+    top: -5px;
+    right: -360px;
     opacity: .6;
     color: #303030 ;
     cursor: pointer;
@@ -124,9 +115,13 @@ box-shadow: 5px 6px 15px 5px rgba(146,146,146,0.6);
 }
 .iksz:hover{
     opacity: 1;
-    transform: rotate(90deg);
+    
 }
-
+.no-hy:hover
+{
+color: #666666;
+cursor: text;
+}
 
 
 .excnav {
