--- a/css/auth.css
+++ b/css/auth.css
@@ -5,9 +5,22 @@ input {
     border: 1px solid #1e8383;
     border-radius: 3px;
     height: 32px;
-
+    text-indent: 30px;
+    caret-color: #5f5f5f;
+    background-image: url('../img/icons/SVG/bright\ logo\ without\ text.svg');
+    background-repeat: no-repeat;
+    background-position: 5px center;
+    background-size: 20px;
+  
+    
+   
 }
- 
+
+ .inp-img
+ {
+     width: 10px;
+     position: relative
+ }
 
 main {
     width: 100%;
@@ -45,7 +58,18 @@ button {
     height: 32px;
     color: white;
 }
-
+.txt-btn
+{
+    width: 250px;
+    background-color: unset;
+    border: none;
+    border-radius: unset;
+    height: unset;
+    color: unset;
+    margin-top: 40px;
+    color: white !important;
+    font-size: 15px;
+}
 p {
     width: 250px;
     text-align: center;
